--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
   <section id="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button type="button" class="btn btn-success"><i class="fab fa-apple"></i>Download</button>
+    <button type="button"><i class="fab fa-android"></i>Download</button>
 
   </section>
 
